[package]
name = "boiler-cli"
version = "0.0.5"
edition = "2024"

[[bin]]
name = "boiler"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "gzip", "json"] }
flate2 = { version = "1.1", features = ["zlib"] }
tar = "0.4"
zip = "5.1"
tempfile = "3"
walkdir = "2"
yini = "=0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
glob = "0.3"
chrono = "0.4"

[profile.dev]
# (use all Cargo defaults)

[profile.release]
opt-level = 3           # full speed
codegen-units = 1       # best cross-function optimization
lto = "thin"            # inlining across crates, but reasonable compile times
debug = false           # no debug info
debug-assertions = false
overflow-checks = true  # keep integer checks in case of bugs
panic = "unwind"        # safer for libraries (or "abort" if you never catch panics)

[profile.fast]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"             # most aggressive; inlines absolutely everywhere
overflow-checks = false
panic = "abort"
strip = "symbols"       # remove all symbols
debug = false
debug-assertions = false
incremental = false

[profile.min-size]
inherits = "release"
opt-level = "z"         # optimize for size
codegen-units = 1
lto = "thin"            # “fat” LTO often grows code size slightly
overflow-checks = false
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
incremental = false
